# IoTsolator-docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
files/: dhcpd.conf.template  hostapd.conf.template  start.sh  stop.sh  supervisord.conf.template
supervisor/: Cargo.toml  README.md
supervisor/src/: config.rs  main.rs  services.rs  supervisor.rs  watchdog.rs
